--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "1.22.0",
+    "@supabase/auth-helpers-nextjs": "^0.2.5",
     "@supabase/supabase-auth-helpers": "^1.2.3",
+    "@types/markdown-it": "^12.2.3",
     "classnames": "2.3.1",
+    "markdown-it": "^13.0.1",
     "next": "^12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
