more styles and clean useAppState

--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
     "stripe:listen": "stripe listen --forward-to=localhost:3000/api/webhooks --project-name=saas-starter"
   },
   "dependencies": {
-    "@stripe/stripe-js": "1.22.0",
     "@supabase/auth-helpers-nextjs": "^0.2.5",
     "@supabase/supabase-auth-helpers": "^1.2.3",
     "@types/markdown-it": "^12.2.3",
     "classnames": "2.3.1",
-    "markdown-it": "^13.0.1",
     "next": "^12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-merge-refs": "1.1.0",
-    "stripe": "8.201.0",
+    "recharts": "^2.1.12",
     "swr": "1.2.0",
-    "tailwindcss": "3.0.18"
+    "tailwindcss": "3.0.18",
+    "victory": "^36.6.0"
   },
   "devDependencies": {
     "@types/classnames": "2.3.1",
