--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-merge-refs": "1.1.0",
+    "react-toastify": "^9.0.8",
     "recharts": "^2.1.12",
     "swr": "1.2.0",
     "tailwindcss": "3.0.18",
+    "validator": "^13.7.0",
     "victory": "^36.6.0"
   },
   "devDependencies": {
     "@types/classnames": "2.3.1",
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
+    "@types/validator": "^13.7.5",
     "autoprefixer": "^10.4.2",
     "postcss": "8.4.5",
     "prettier": "2.5.1",
